feat: add Shadcn UI components and basic tanstack react-query and router setup

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/wildlifepediaicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wildlifepedia</title>
+    <!-- not for production, but for development -->
+    <script
+      crossorigin="anonymous"
+      src="//unpkg.com/react-scan/dist/auto.global.js"
+    ></script>
     <meta
       name="description"
       content="Wildlifepedia is a website for wildlife enthusiasts to learn about different species and their habitats. "
